# qm-talk

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: analyse.c  analyse.h  coop.c  func.c  func.h  main.c  test.c
test/: funcTest.c  test_analyse.c  test_analyse_pedantic.c
